# vlm-tools

./: LICENSE  README.md
evaluation/OpenOOD/: .gitignore  pretrained_models  pyproject.toml  results
evaluation/OpenOOD/configs/postprocessors/: hycoclip.yml
evaluation/OpenOOD/openood/evaluation_api/: postprocessor.py
evaluation/OpenOOD/openood/networks/: __init__.py  hycoclip  hycoclip_net.py
evaluation/OpenOOD/openood/postprocessors/: __init__.py  hycoclip_postprocessor.py
evaluation/OpenOOD/scripts/: eval_ood_imagenet_foundation_models.py
evaluation/hypvl/: datasets  hycoclip  main_hyperbolic.py  main_hyperbolic_all.py  pyproject.toml
evaluation/hypvl/dataset_zoo/: aro_datasets.py  constants.py
evaluation/hypvl/meru/: config.py
evaluation/hypvl/meru/utils/: checkpointing.py
evaluation/hypvl/model_zoo/: __init__.py  clip_models.py
evaluation/hypvl/pretrained_models/: train_results
evaluation/sugar-crepe/: main_eval_hyperbolic.py  pyproject.toml
evaluation/sugar-crepe/model_zoo/: __init__.py  clip_models.py  config.py
visualization/CO-SNE/: htsne_impl.py  main.py  pyproject.toml
visualization/CO-SNE/saved_figures/: CO-SNE.eps  HT-SNE.eps  tsne.eps
visualization/HoroPCA/: main.py  plot_poincare.py  pyproject.toml
visualization/HoroPCA/geom/: minkowski.py
