[project]
name = "hypvl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clip>=0.2.0",
    "diffdist>=0.1",
    "easydict>=1.13",
    "faiss-gpu-cu12>=1.12.0",
    "ftfy>=6.3.1",
    "gdown>=5.2.0",
    "imgaug>=0.4.0",
    "libmr>=0.1.9",
    "loguru>=0.7.3",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pip>=25.3",
    "regex>=2025.9.18",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "statsmodels>=0.14.5",
    "timm>=1.0.20",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.extra-build-dependencies]
libmr = ["Cython", "numpy"]
